--- a/front/src/components/SearchBox/SearchBox.scss
+++ b/front/src/components/SearchBox/SearchBox.scss
@@ -9,8 +9,9 @@
 
         .header__navbar {
             display: flex;
-            padding: 7px;
+            padding: 7px 0;
             flex: 1;
+            align-items: center;
 
             .header__logo {
                 object-fit: contain;
